# mlir-rustc

./: .env  CMakeLists.txt
code/ADT/: ScopedCanonicalPath.cpp
code/Frontend/: FrontendActions.cpp
code/Optimizer/: Attributer.cpp  CMakeLists.txt  ConvertLirToLLVM.cpp  ConvertMirToLir.cpp  DeadArgumentElimination.cpp  DeadStoreElimination.cpp  FuncSpecialization.cpp  GVN.cpp  HirLICM.cpp  Loop.cpp  LowerAwait.cpp  LowerErrorPropagation.cpp  LowerUtilsToLLVM.cpp  MemoryAnalysis.cpp  Rewriter.cpp  SummaryWriterPass.cpp
code/_lexer/: CMakeLists.txt
code/_lexer/include/: Cursor.h  Lexer.h  Token.h  Unescape.h
code/_lexer/src/: Lexer.cpp  Unescape.cpp
code/_lexer/tests/: LexerTests.cpp
code/analysis/: Attributer.cpp  CMakeLists.txt  MemorySSA.cpp
code/ast/: Expression.cpp
code/codegen/: LowerUtilsToLLVM.cpp
code/hir/: HirDialect.cpp  HirTypes.cpp
code/include/ADT/: CanonicalPath.h  Result.h
code/include/CrateBuilder/: StructType.h
code/include/Hir/: CMakeLists.txt  HirDialect.h  HirOps.td  HirOpsBase.td  (+1 more)
code/lexer/: Identifier.cpp  Lexer.cpp  Lexer2.cpp  Token.cpp
code/parser/: ExpressionWithoutBlock.cpp
code/sema/: Autoderef.cpp  Properties.cpp
code/toml/: Table.cpp
tests/: CMakeLists.txt
tests/ADT/: ScopedHashTable.cpp
tests/expression/: Axum.cpp  ExamplesFun1.cpp  ExamplesFun2.cpp  ExamplesFun3.cpp  Function.cpp  Match.cpp  Match2.cpp  Path.cpp  Range.cpp
tests/items/: Const.cpp  Function.cpp  Implementation.cpp  Struct.cpp  TypeAlias.cpp
tests/lexer/: Lexer.cpp
tests/parser/: ParserTests.cpp
tools/rustc-opt/: CMakeLists.txt
(+18 files in other folders)
